# tendos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README2.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/plans/: 2026-04-24-v0.1-release-readiness.md
docs/releases/: v0.1.0-draft.md  v0.1.1-draft.md  v0.1.2-draft.md
examples/hermes-local-agent/: README.md  cartridge.json
examples/hermes-local-agent/harness/: Dockerfile  harness.yaml  hermes
examples/hermes-local-agent/prompts/: system.txt
examples/mle-interview-tutor/: README.md  cartridge.json
examples/mle-interview-tutor/harness/: Dockerfile  harness.yaml  hermes
examples/mle-interview-tutor/prompts/: system.txt
src/tendos/: __init__.py
src/tendos/cartridge/: __init__.py  loader.py  schema.py
src/tendos/cli/: __init__.py  main.py
src/tendos/hub/: __init__.py
src/tendos/runtime/: __init__.py
src/tendos/security/: __init__.py  encryption.py  signing.py  tokens.py
tests/: conftest.py
tests/unit/: test_cli.py  test_encryption.py  test_loader.py  test_schema.py  test_signing.py  test_tokens.py
