[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tendos"
version = "0.1.0"
description = "Plug-and-play AI cartridge hub — package, distribute, and run composable AI harness configurations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Tendos Contributors" }
]
keywords = ["ai", "cartridge", "hub", "composable", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=15.0.0",
    "httpx>=0.27",
    "cryptography>=42.0",
    "pyjwt>=2.8",
    "pyyaml>=6.0",
    "ruff>=0.15.9",
    "bandit>=1.9.4",
    "mypy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/junaidahmed361/tendos"
Repository = "https://github.com/junaidahmed361/tendos"
Issues = "https://github.com/junaidahmed361/tendos/issues"
Documentation = "https://github.com/junaidahmed361/tendos"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "bandit>=1.7",
    "safety>=3.0",
    "pre-commit>=3.7",
    "hypothesis>=6.100",
]

[project.scripts]
tendos = "tendos.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tendos"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "ARG002"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=tendos --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
source = ["src/tendos"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
